--- a/Homework/homework1/catalog/catalog.html
+++ b/Homework/homework1/catalog/catalog.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="catalog.html">Каталог</a>
-    <a href="../contacts.html">Контакты</a>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum inventore perspiciatis, eveniet fugiat accusantium, nostrum quo quis saepe similique autem fuga eos, commodi exercitationem? Corrupti iusto assumenda facere tempora dolor accusamus minus, rerum nobis asperiores doloremque incidunt quibusdam quas expedita dicta ea dignissimos odit sint provident ex repellendus perspiciatis dolorum corporis dolorem modi. Delectus dolorem voluptatibus perferendis eligendi molestiae sunt exercitationem incidunt fugit quaerat, eius odit amet expedita obcaecati sint. Voluptatibus eveniet tempore perspiciatis, sed recusandae deleniti modi eaque quas, eius iste exercitationem! Dolore delectus nulla temporibus repudiandae, omnis consequatur atque quos officia quia autem aperiam sunt minima nam a cumque vitae. Ab adipisci temporibus suscipit culpa corporis optio fugiat numquam nulla autem nemo debitis et cum ducimus fuga fugit mollitia quam, iusto reprehenderit saepe distinctio id dolorem officia ipsa? Ullam expedita maxime ratione quas repellendus earum, quam iure. Voluptatem quos excepturi cupiditate magni beatae quasi inventore id officiis eveniet.</p>
-    <h2>Спелый кокос</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias sint facere voluptates, ut laboriosam, nobis earum ipsum tenetur nam, fugit temporibus cumque quaerat! Consequuntur.</p>
+    <a class="nav__link" href="../index.html">Главная</a>
+    <a class="nav__link" href="catalog.html">Каталог</a>
+    <a class="nav__link" href="../contacts.html">Контакты</a>
+    <h1 class="title">Каталог</h1>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum inventore perspiciatis, eveniet fugiat accusantium, nostrum quo quis saepe similique autem fuga eos, commodi exercitationem? Corrupti iusto assumenda facere tempora dolor accusamus minus, rerum nobis asperiores doloremque incidunt quibusdam quas expedita dicta ea dignissimos odit sint provident ex repellendus perspiciatis dolorum corporis dolorem modi. Delectus dolorem voluptatibus perferendis eligendi molestiae sunt exercitationem incidunt fugit quaerat, eius odit amet expedita obcaecati sint. Voluptatibus eveniet tempore perspiciatis, sed recusandae deleniti modi eaque quas, eius iste exercitationem! Dolore delectus nulla temporibus repudiandae, omnis consequatur atque quos officia quia autem aperiam sunt minima nam a cumque vitae. Ab adipisci temporibus suscipit culpa corporis optio fugiat numquam nulla autem nemo debitis et cum ducimus fuga fugit mollitia quam, iusto reprehenderit saepe distinctio id dolorem officia ipsa? Ullam expedita maxime ratione quas repellendus earum, quam iure. Voluptatem quos excepturi cupiditate magni beatae quasi inventore id officiis eveniet.</p>
+    <h2 class="heading">Спелый кокос</h2>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias sint facere voluptates, ut laboriosam, nobis earum ipsum tenetur nam, fugit temporibus cumque quaerat! Consequuntur.</p>
     <img width="450" src="../img/coconut.jpg" alt="Картинка с кокосом" title="Картинка с кокосом">
-    <h2>Освежающее смузи из манго</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea vel rem rerum animi odit provident quo? Quidem corporis aperiam, nam dolor quibusdam eum doloribus labore.</p>
+    <h2 class="heading">Освежающее смузи из манго</h2>
+    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea vel rem rerum animi odit provident quo? Quidem corporis aperiam, nam dolor quibusdam eum doloribus labore.</p>
     <img width="450" src="../img/mango-shake.jpg" alt="Картинка с манго" title="Картинка с манго">
-    <h2>Сочный ананас</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam nisi molestias minus est odio quam excepturi, quos quas dolorem similique laudantium cum vero doloribus!</p>
+    <h2 class="heading">Сочный ананас</h2>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam nisi molestias minus est odio quam excepturi, quos quas dolorem similique laudantium cum vero doloribus!</p>
     <img width="450" src="../img/pineapples.jpg" alt="Картинка с ананасом" title="Картинка с ананасом">
 </body>
 </html>
