--- a/Seminar1/index.html
+++ b/Seminar1/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Главная</a>
-    <a href="info/about.html">Обо мне</a>
-    <a href="form.html">Оставить заявку</a>
-    <h1>html-страница</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt magnam animi aspernatur voluptas ducimus saepe autem deleniti mollitia, repellendus, pariatur vel assumenda, illum beatae rerum ab sapiente provident vero nobis?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci illum distinctio in voluptatibus ducimus error dolor animi assumenda eaque, accusantium sit inventore voluptate harum totam dicta eveniet explicabo a! Perferendis!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci illum distinctio in voluptatibus ducimus error dolor animi assumenda eaque, accusantium sit inventore voluptate harum totam dicta eveniet explicabo a! Perferendis!</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci illum distinctio in voluptatibus ducimus error dolor animi assumenda eaque, accusantium sit inventore voluptate harum totam dicta eveniet explicabo a! Perferendis!</p>
+    <a class="nav_link" href="index.html">Главная</a>
+    <a class="nav_link" href="info/about.html">Обо мне</a>
+    <a class="nav_link" href="form.html">Оставить заявку</a>
+    <h1 class="title">html-страница</h1>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt magnam animi aspernatur voluptas ducimus saepe autem deleniti mollitia, repellendus, pariatur vel assumenda, illum beatae rerum ab sapiente provident vero nobis?</p>
+    <h2 class="subtitle">Заголовок 2-го уровня</h2>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci illum distinctio in voluptatibus ducimus error dolor animi assumenda eaque, accusantium sit inventore voluptate harum totam dicta eveniet explicabo a! Perferendis!</p>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci illum distinctio in voluptatibus ducimus error dolor animi assumenda eaque, accusantium sit inventore voluptate harum totam dicta eveniet explicabo a! Perferendis!</p>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci illum distinctio in voluptatibus ducimus error dolor animi assumenda eaque, accusantium sit inventore voluptate harum totam dicta eveniet explicabo a! Perferendis!</p>
     <a href="https://vk.com/"><img src="vk.svg" alt="Vk" width="30"></a>
     <a href="https://telegram.org/"><img src="telegram.svg" alt="Telegram" width="30"></a>
 </body>
