--- a/Homework/homework1/contacts.html
+++ b/Homework/homework1/contacts.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-    <h1>Контакты</h1>
+    <a class="nav__link" href="index.html">Главная</a>
+    <a class="nav__link" href="catalog/catalog.html">Каталог</a>
+    <a class="nav__link" href="contacts.html">Контакты</a>
+    <h1 class="title">Контакты</h1>
 </body>
 </html>
