--- a/Homework/homework1/index.html
+++ b/Homework/homework1/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, obcaecati! Quo mollitia, iste, consequatur odit in culpa vel modi et veniam inventore similique distinctio? Reiciendis velit veritatis corporis tempora tempore.</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit harum expedita veniam, suscipit corrupti soluta, animi cum quidem explicabo quae fugit deleniti fuga laborum. Quae odio cumque quas reprehenderit quibusdam.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ipsum officiis maxime veniam accusamus possimus tenetur molestiae porro nulla incidunt ratione at quidem, itaque cumque, voluptatem voluptatum dignissimos commodi dicta.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem dolorum nesciunt consequuntur, quam rerum saepe quisquam necessitatibus assumenda eaque voluptatibus dolor at minima, eveniet est rem numquam blanditiis iure tempora.</p>
+    <a class="nav__link" href="index.html">Главная</a>
+    <a class="nav__link" href="catalog/catalog.html">Каталог</a>
+    <a class="nav__link" href="contacts.html">Контакты</a>
+    <h1 class="title">Главная страница</h1>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, obcaecati! Quo mollitia, iste, consequatur odit in culpa vel modi et veniam inventore similique distinctio? Reiciendis velit veritatis corporis tempora tempore.</p>
+    <h2 class="heading">Добро пожаловать на сайт</h2>
+    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit harum expedita veniam, suscipit corrupti soluta, animi cum quidem explicabo quae fugit deleniti fuga laborum. Quae odio cumque quas reprehenderit quibusdam.</p>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ipsum officiis maxime veniam accusamus possimus tenetur molestiae porro nulla incidunt ratione at quidem, itaque cumque, voluptatem voluptatum dignissimos commodi dicta.</p>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem dolorum nesciunt consequuntur, quam rerum saepe quisquam necessitatibus assumenda eaque voluptatibus dolor at minima, eveniet est rem numquam blanditiis iure tempora.</p>
 </body>
 </html>
