--- a/Seminar1/form.html
+++ b/Seminar1/form.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Главная</a>
-    <a href="info/about.html">Обо мне</a>
-    <a href="form.html">Оставить заявку</a>
-    <h1>Оставить заявку</h1>
+    <a class="nav_link" href="index.html">Главная</a>
+    <a class="nav_link" href="info/about.html">Обо мне</a>
+    <a class="nav_link" href="form.html">Оставить заявку</a>
+    <h1 class="title">Оставить заявку</h1>
     <form action="#">
-        <input type="text" placeholder="Введите ваше имя"><br>
-        <input type="email" placeholder="Введите ваш e-mail"><br>
-        <button type="submit">Отправить</button>
-        <button type="reset">Стереть</button>
+        <input class="form_input" type="text" placeholder="Введите ваше имя"><br>
+        <input class="form_input" type="email" placeholder="Введите ваш e-mail"><br>
+        <button class="form_button" type="submit">Отправить</button>
+        <button class="form_button" type="reset">Стереть</button>
     </form>
 </body>
 </html>
