--- a/Seminar1/info/about.html
+++ b/Seminar1/info/about.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Обо мне</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="about.html">Обо мне</a>
-    <a href="../form.html">Оставить заявку</a>
-    <h1>Обо мне</h1>
-    <img width="450" src="../img/raccoon.jpg" alt="Картинка с енотом">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dignissimos recusandae assumenda, ipsa praesentium maxime libero qui aliquid, fugit ex esse dicta voluptatum illum veniam, ipsam unde nisi fugiat ab quis sunt. Numquam ut nemo voluptates doloremque architecto quos, consequatur eaque dolores exercitationem? Odit aperiam nostrum ullam commodi asperiores similique minus alias animi facilis! Rerum est a corporis provident blanditiis ab, voluptate, fugit neque magni, deserunt doloribus non sit quis assumenda quidem repellendus accusantium numquam minus voluptatem nobis deleniti. Minus incidunt veniam adipisci totam, sunt tenetur exercitationem illo reiciendis sapiente laborum cumque, eos officia repellendus earum odit? Qui corrupti voluptas sunt voluptates sequi, incidunt quia, odio animi repudiandae architecto voluptatibus esse totam? Facilis magni nisi fuga labore corporis exercitationem minima quaerat, rerum accusantium qui unde voluptatem at velit ipsam pariatur aut nostrum, placeat ab cupiditate illo hic ratione cumque dolor ad? Error obcaecati, dolore sint eligendi doloremque itaque aspernatur placeat?</p>
+    <a class="nav_link" href="../index.html">Главная</a>
+    <a class="nav_link" href="about.html">Обо мне</a>
+    <a class="nav_link" href="../form.html">Оставить заявку</a>
+    <h1 class="title">Обо мне</h1>
+    <img class="about_photo" width="450" src="../img/raccoon.jpg" alt="Картинка с енотом">
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dignissimos recusandae assumenda, ipsa praesentium maxime libero qui aliquid, fugit ex esse dicta voluptatum illum veniam, ipsam unde nisi fugiat ab quis sunt. Numquam ut nemo voluptates doloremque architecto quos, consequatur eaque dolores exercitationem? Odit aperiam nostrum ullam commodi asperiores similique minus alias animi facilis! Rerum est a corporis provident blanditiis ab, voluptate, fugit neque magni, deserunt doloribus non sit quis assumenda quidem repellendus accusantium numquam minus voluptatem nobis deleniti. Minus incidunt veniam adipisci totam, sunt tenetur exercitationem illo reiciendis sapiente laborum cumque, eos officia repellendus earum odit? Qui corrupti voluptas sunt voluptates sequi, incidunt quia, odio animi repudiandae architecto voluptatibus esse totam? Facilis magni nisi fuga labore corporis exercitationem minima quaerat, rerum accusantium qui unde voluptatem at velit ipsam pariatur aut nostrum, placeat ab cupiditate illo hic ratione cumque dolor ad? Error obcaecati, dolore sint eligendi doloremque itaque aspernatur placeat?</p>
 </body>
 </html>
