--- a/Seminar3/index.html
+++ b/Seminar3/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>New project</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="top">
+            <div class="header">
+                <a class="header__link" href="#">Home</a>
+                <a class="header__link" href="#">About</a>
+                <a class="header__link" href="#">Services</a>
+                <a class="header__link" href="#">Blog</a>
+                <a class="header__link" href="#">Contact</a>
+            </div>
+            <div class="top__content">
+                <div class="top__info">
+                    <h3 class="subtitle">Next genaretion platform</h3>
+                    <h1 class="title">Artificial intelligence & Syber security</h1>
+                    <p class="text">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</p>
+                    <div class="top__buttons">
+                        <button class="button">Get Started</button>
+                        <button class="button">
+                            <svg width="20" height="25" viewBox="0 0 20 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M20 12.5L0.500001 24.1913L0.500002 0.808657L20 12.5Z" fill="white"/>
+                                </svg>
+                                Watch Video</button>
+                    </div>
+                </div>
+                <img src="img/top_content_img.svg" alt="top_image">
+            </div>
+            <div class="top__logos">
+                <img src="img/Group 400.svg" alt="logo1">
+                <img src="img/Group 401.svg" alt="logo2">
+                <img src="img/Group 402.svg" alt="logo3">
+                <img src="img/Group 403.svg" alt="logo4">
+            </div>
+        </div>
+    </body>
 </html>
