--- a/Homework/homework_3_4/index.html
+++ b/Homework/homework_3_4/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="top">
         <div class="header">
-            <img src="img/Logo.svg" alt="Logo">
+            <img src="./img/Logo.svg" alt="Logo">
             <div class="header__menu">
-                <a class="header__link" href="#">Home</a>
+                <a class="header__link__home" href="#">Home</a>
                 <a class="header__link" href="#">About Us</a>
                 <a class="header__link" href="#">Services</a>
                 <a class="header__link" href="#">Features</a>
@@ -26,8 +26,8 @@
                 <h1 class="title">SEO & Digital Marketing For Your Website.</h1>
                 <p class="text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
                 <div class="top__buttons">
-                    <button class="button">Start Now</button>
-                    <button class="button">Whatch Video</button>
+                    <button class="button1">Start Now</button>
+                    <button class="button2">Whatch Video</button>
                 </div>
             </div>
             <img src="img/top_content_img.svg" alt="top_image">
@@ -38,7 +38,6 @@
         <img src="img/logo_3.svg" alt="logo_3">
         <img src="img/logo_4.svg" alt="logo_4">
         <img src="img/logo_5.svg" alt="logo_5">
-        <img src="img/logo_6.svg" alt="logo_6">
     </div>
     </div>
 </body>
