--- a/Homework/homework_3_4/index.html
+++ b/Homework/homework_3_4/index.html
@@ -40,5 +40,52 @@
         <img src="img/logo_5.svg" alt="logo_5">
     </div>
     </div>
+    <div class="aside">
+        <div class="item">
+            <img src="./img/icon_1.svg" alt="" class="item__img">
+            <h3 class="heading">Grow Your Business</h3>
+            <p class="item__text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <button class="item__read_more">Read More...</button>
+        </div>
+        <div class="item item_white">
+            <img src="./img/icon_2.svg" alt="" class="item__img">
+            <h3 class="heading">Get Quality Ieads</h3>
+            <p class="item__text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <button class="item__read_more">Read More...</button>
+        </div>
+        <div class="item">
+            <img src="./img/icon_3.svg" alt="" class="item__img">
+            <h3 class="heading">Drive More Sales</h3>
+            <p class="item__text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <button class="item__read_more">Read More...</button>
+        </div>
+    </div>
+    <div class="advantages">
+        <h2 class="advantages__title">Why You Should Choose Us.</h2>
+        <p class="advantages_text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+            applications through revolutionary catalysts.</p>
+        <div class="advantages__item">
+            <div class="adv__item">
+                <img src="./img/adv_1.svg" alt="adv_1" class="adv__item__img__1">
+                <h3 class="adv__heading">Keyword Research</h3>
+                <p class="adv__item__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="adv__btn btn-arrow">Learn More<img src="./img/arrow.svg" alt="arrow"/></button>
+            </div>
+            <div class="adv__item__shadow">
+                <img src="./img/adv_2.svg" alt="adv_2" class="adv__item__img__2">
+                <h3 class="adv__heading">Seo Optimazadion</h3>
+                <p class="adv__item__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="adv__btn btn-arrow">Learn More<img src="./img/arrow.svg" alt="arrow"/> </button>
+            </div>
+            <div class="adv__item">
+                <img src="./img/adv_3.svg" alt="adv_3" class="adv__item__img__3">
+                <h3 class="adv__heading">Social Marketing</h3>
+                <p class="adv__item__text">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button class="adv__btn btn-arrow">Learn More<img src="./img/arrow.svg" alt="arrow"/> </button>
+            </div>
+            
+        </div>
+            
+    </div>
 </body>
 </html>
