--- a/Seminar4/index.html
+++ b/Seminar4/index.html
@@ -41,5 +41,39 @@
 				<img src="./img/logo4.png" alt="Logo 4" />
 			</div>
 		</footer>
+		<div class="content">
+			<!-- (.item>img.item__img+h3.heading+p.item__text)*6 -->
+			<div class="item">
+				<img src="./img/welcome-3 1 (1).svg" alt="" class="item__img">
+				<h3 class="heading">Expert Prespective Agency Awards</h3>
+				<p class="item__text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+			</div>
+			<div class="item">
+				<img src="./img/welcome-3 1 (2).svg" alt="" class="item__img">
+				<h3 class="heading">Business Prespective Global Agency Awards</h3>
+				<p class="item__text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+			</div>
+			<div class="item">
+				<img src="" alt="./img/welcome-3 1 (3).svg" class="item__img">
+				<h3 class="heading">Value for Results in Global Agency Awards</h3>
+				<p class="item__text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+			</div>
+			<div class="item item_big">
+				<img width="306" src="./img/welcome-3 1.svg" alt="" class="item__img">
+				<h3 class="heading">In print, and publishing industries for previewing layouts and visual mockups.</h3>
+				<p class="item__text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+			</div>
+			<div class="item">
+				<img src="./img/welcome-3 1 (3).svg" alt="" class="item__img">
+				<h3 class="heading">Value for Results in Global Agency Awards</h3>
+				<p class="item__text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+			</div>
+			<div class="item">
+				<img src="./img/welcome-3 1 (3).svg" alt="" class="item__img">
+				<h3 class="heading">Value for Results in Global Agency Awards</h3>
+				<p class="item__text">Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p>
+			</div>
+			</div>
+		</div>
 	</body>
 </html>
