--- a/Homework/homework_6/index.html
+++ b/Homework/homework_6/index.html
@@ -13,17 +13,19 @@
             <div class="top container">
                 <div class="top__left">
                     <img class ="top__logo" src="./img/top_logo.svg" alt="top_logo">
-                    <img class ="top__magnifier" src="./img/top_magnifier.svg" alt="top_magnifier">
+                    <button class="top__magnifier"><img src="./img/top_magnifier.svg" alt="top_magnifier"/></button>
                 </div>
                 <div class="top__right">
-                    <img class="content_img" src="./img/top_btns.svg" alt="top_btns">
+                    <button class="top_btns"><img src="./img/top_btn_1.svg" alt="top_btn_1"/></button>
+                    <button class="top_btns"><img src="./img/top_btn_2.svg" alt="top_btn_2"/></button>
+                    <button class="top_btns"><img src="./img/top_btn_3.svg" alt="top_btn_3"/></button>
                 </div>
             </div>
         </div>
     </header>
     <main>
         <div class="content">
-                <img src="./img/mainImg.svg" alt="Main Image"/>
+                <img class="main__img" src="./img/mainImg.svg" alt="Main Image"/>
                 <div class="content_block">
                     <img src="./img/content_rectangle.svg" alt="content_rectangle">
                     <div class="content-text">
@@ -32,33 +34,31 @@
                     </div>
                 </div>
         </div>
-        <div class="categories">
-            <div class="item">
-                <img src="./img/for women.png" alt="for women">
-                <div class="category__text">
-                    <h3>30% off</h3>
-                    <h2>for women</h2>
+        <div class="categories container">
+            <div class="categories__wrapper">
+                <div class="item__women">
+                    <div class="category__text">
+                        <h3>30% off</h3>
+                        <h2>for women</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="item">
-                <img src="./img/for men.png" alt="for men">
-                <div class="category__text">
-                    <h3>hot deal</h3>
-                    <h2>for men</h2>
+                <div class="item__men">
+                    <div class="category__text">
+                        <h3>hot deal</h3>
+                        <h2>for men</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="item">
-                <img src="./img/for kids.png" alt="for kids">
-                <div class="category__text">
-                    <h3>new arrivals</h3>
-                    <h2>for kids</h2>
+                <div class="item__kids">
+                    <div class="category__text">
+                        <h3>new arrivals</h3>
+                        <h2>for kids</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="item item__big">
-                <img src="./img/accesories.png" alt="accesories">
-                <div class="category__text">
-                    <h3>luxirous & trendy</h3>
-                    <h2>accesories</h2>
+                <div class="item__acs">
+                    <div class="category__text">
+                        <h3>luxirous & trendy</h3>
+                        <h2>accesories</h2>
+                    </div>
                 </div>
             </div>
         </div>
