--- a/Homework/homework_6/index.html
+++ b/Homework/homework_6/index.html
@@ -10,21 +10,22 @@
 <body>
     <header>
         <div class="top__wrapper">
-            <div class="top container">
+            <div class="top">
                 <div class="top__left">
                     <img class ="top__logo" src="./img/top_logo.svg" alt="top_logo">
                     <button class="top__magnifier"><img src="./img/top_magnifier.svg" alt="top_magnifier"/></button>
                 </div>
                 <div class="top__right">
                     <button class="top_btns"><img src="./img/top_btn_1.svg" alt="top_btn_1"/></button>
-                    <button class="top_btns"><img src="./img/top_btn_2.svg" alt="top_btn_2"/></button>
-                    <button class="top_btns"><img src="./img/top_btn_3.svg" alt="top_btn_3"/></button>
+                    <button class="top_btns hidden"><img src="./img/top_btn_2.svg" alt="top_btn_2"/></button>
+                    <button class="top_btns hidden"><img src="./img/top_btn_3.svg" alt="top_btn_3"/></button>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <div class="content">
+        <div class="content__wrapper">
+            <div class="content">
                 <img class="main__img" src="./img/mainImg.svg" alt="Main Image"/>
                 <div class="content_block">
                     <img src="./img/content_rectangle.svg" alt="content_rectangle">
@@ -33,6 +34,7 @@
                         <p class="title-text">of luxerios <span class="text-select">fashion</span></p>
                     </div>
                 </div>
+            </div>
         </div>
         <div class="categories container">
             <div class="categories__wrapper">
